# backend/controllers/url_Controller.go
@@ -8,6 +8,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// CreateBook godoc
+// @Summary Create a new URL
+// @Description Create a new URL with the given details.
+// @Tags urls
+// @Accept  json
+// @Produce  json
+// @Param url body string true "URL"
+// @Success 201 {object} string
+// @Router /process-url [post]
 func ProcessURL(c *gin.Context) {
 	var req struct {
 		URL       string `json:"url" binding:"required"`
@@ -19,16 +28,13 @@ func ProcessURL(c *gin.Context) {
 		return
 	}
 
-	// Parse the URL
 	parsedURL, err := url.Parse(req.URL)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid URL"})
 		return
 	}
 
-	// Define the operation functions
 	canonicalize := func(parsedURL *url.URL) string {
-		// Remove query parameters and trailing slashes
 		parsedURL.RawQuery = ""
 		parsedURL.Fragment = ""
 		parsedURL.Path = strings.TrimRight(parsedURL.Path, "/")
@@ -36,12 +42,10 @@ func ProcessURL(c *gin.Context) {
 	}
 
 	redirect := func(parsedURL *url.URL) string {
-		// Ensure the domain is www.byfood.com and convert the URL to lowercase
 		parsedURL.Host = "www.byfood.com"
 		return strings.ToLower(parsedURL.String())
 	}
 
-	// Process the URL based on the operation
 	var processedURL string
 	if req.Operation == "canonical" {
 		processedURL = canonicalize(parsedURL)
@@ -49,7 +53,7 @@ func ProcessURL(c *gin.Context) {
 		processedURL = redirect(parsedURL)
 	} else if req.Operation == "all" {
 		canonical := canonicalize(parsedURL)
-		parsedURL, _ = url.Parse(canonical) // re-parse the canonical URL
+		parsedURL, _ = url.Parse(canonical)
 		processedURL = redirect(parsedURL)
 	} else {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid operation"})
